chore: Edit OG meta tag

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     <meta name="author" content="Zlatonn" />
     <meta property="og:title" content="Warranty Expiry Checker" />
     <meta property="og:description" content="A web app for tracking and managing product warranties efficiently." />
-    <meta property="og:image" content="/images/warranty_checker_preview.webp" />
+    <meta property="og:image" content="/images/web-preview.webp" />
     <meta property="og:url" content="https://warranty-checker.netlify.app/" />
     <meta property="og:type" content="website" />
 
